fixed white space

--- a/frontend/src/pages/HomePage/homePage.css
+++ b/frontend/src/pages/HomePage/homePage.css
@@ -9,7 +9,6 @@
 }
 
 .content-container {
-  height: 90vh;
   width: 100vw;
   display: flex;
   flex-direction: row;
